--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -105,12 +105,13 @@
     "t_csr_list": "Реестр персонала учреждения",
     "t_add_staff": "Добавить сотрудника",
     "t_pin": "ПИН",
+    "t_job_title": "Должность",
     "Instrument saved.": "Инструмент сохранен",
     "Completati corect toate campurile!": "Все данные должны быть внесены аккуратно",
     "The following fields are mandatory: PIN, LK1a, LK1b, LK1c!": "Следующие поля обязательны для заполнения:ПИН, LK1a, LK1b, LK1c!",
     "t_choose": "--- выбрать ---",
     "t_choose_value": "-9",
-    "The following fields are mandatory: E1, EUID!": "Следующие поля обязательны для заполнения: E1, EUID!",
+    "The following fields are mandatory: J1!": "Следующие поля обязательны для заполнения: J1!",
     "t_euid": "EUID",
     "t_id": "ID",
     "Are you sure you want to delete this item?": "Вы уверены что хотите это удалить?",
@@ -164,28 +165,28 @@
     "t_number_completed": "Завершено",
     "no_unknown": "Не может быть неизвестным",
     "child_under_7": "Ребенок был младше 7 лет",
-	"t_settlement_type_10": "Oбласть",
-	"t_settlement_type_20": "Район",
-	"t_settlement_type_21": "Города областного подчинения",
-	"t_settlement_type_22": "Районы города",
-	"t_settlement_type_23": "Города районного подч",
-	"t_settlement_type_24": "Городские поселки",
-	"t_settlement_type_31": "Сельские сходы граждан",
-	"t_settlement_type_10_value": "10",
-	"t_settlement_type_20_value": "20",
-	"t_settlement_type_21_value": "21",
-	"t_settlement_type_22_value": "22",
-	"t_settlement_type_23_value": "23",
-	"t_settlement_type_24_value": "24",
-	"t_settlement_type_31_value": "31",
-	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
+    "t_settlement_type_10": "Oбласть",
+    "t_settlement_type_20": "Район",
+    "t_settlement_type_21": "Города областного подчинения",
+    "t_settlement_type_22": "Районы города",
+    "t_settlement_type_23": "Города районного подч",
+    "t_settlement_type_24": "Городские поселки",
+    "t_settlement_type_31": "Сельские сходы граждан",
+    "t_settlement_type_10_value": "10",
+    "t_settlement_type_20_value": "20",
+    "t_settlement_type_21_value": "21",
+    "t_settlement_type_22_value": "22",
+    "t_settlement_type_23_value": "23",
+    "t_settlement_type_24_value": "24",
+    "t_settlement_type_31_value": "31",
+    "af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
     "impossible": "Hевозможное",
     "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
-	"main._chooseFolder": "Choose folder",
-	"_chooseFile": "Choose file",
-	"main.success": "Success",
-	"main._dataDownloaded": "Export successful!",
-	"Please fill in all fields": "Please fill in all fields",
-	"Error": "Error",
-	"main._dataDownloadedError": "Error. No folder selected!"
+    "main._chooseFolder": "Choose folder",
+    "_chooseFile": "Choose file",
+    "main.success": "Success",
+    "main._dataDownloaded": "Export successful!",
+    "Please fill in all fields": "Please fill in all fields",
+    "Error": "Error",
+    "main._dataDownloadedError": "Error. No folder selected!"
 }
