--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -66,18 +66,18 @@
     "t_institution_type_option_25": "VII tur. Aqliy rivojlanishida nuqsoni bo'lgan bolalar uchun",
     "t_institution_type_option_26": "VIII tur. Intellektual rivojlanishida nuqsoni bo'lgan bolalar uchun",
     "t_institution_type_option_11_value": "11",
-	"t_institution_type_option_12_value": "12",
-	"t_institution_type_option_13_value": "13",
-	"t_institution_type_option_14_value": "14",
-	"t_institution_type_option_15_value": "15",
-	"t_institution_type_option_16_value": "16",
-	"t_institution_type_option_17_value": "17",
-	"t_institution_type_option_21_value": "21",
-	"t_institution_type_option_22_value": "22",
-	"t_institution_type_option_23_value": "23",
-	"t_institution_type_option_24_value": "24",
-	"t_institution_type_option_25_value": "25",
-	"t_institution_type_option_26_value": "26",
+    "t_institution_type_option_12_value": "12",
+    "t_institution_type_option_13_value": "13",
+    "t_institution_type_option_14_value": "14",
+    "t_institution_type_option_15_value": "15",
+    "t_institution_type_option_16_value": "16",
+    "t_institution_type_option_17_value": "17",
+    "t_institution_type_option_21_value": "21",
+    "t_institution_type_option_22_value": "22",
+    "t_institution_type_option_23_value": "23",
+    "t_institution_type_option_24_value": "24",
+    "t_institution_type_option_25_value": "25",
+    "t_institution_type_option_26_value": "26",
     "t_no_children": "Xizmatga ega bo'layotgan bolalar soni",
     "t_no_staff": "Muassasada ishlayotgan xodimlar soni",
     "t_no_patronat": "Soni",
@@ -105,12 +105,13 @@
     "t_csr_list": "Muassasa xodimlarining reestri",
     "t_add_staff": "Xodimni qo'shish",
     "t_pin": "PIN",
+    "t_job_title": "Lavozim nomi",
     "Instrument saved.": "Shakl saqlandi",
     "Completati corect toate campurile!": "Barcha ma'lumotlar tog'ri kiritilishi kerak",
     "The following fields are mandatory: PIN, LK1a, LK1b, LK1c!": "Quyidagi maydonlarni to'ldirish majburiy: PIN, LK1a, LK1b, LK1c!",
     "t_choose": "--- tanlang ---",
     "t_choose_value": "-9",
-    "The following fields are mandatory: E1, EUID!": "Quyidagi maydonlarni to'ldirish majburiy: E1, EUID!",
+    "The following fields are mandatory: J1!": "Quyidagi maydonlarni to'ldirish majburiy: J1!",
     "t_euid": "EUID",
     "t_id": "ID",
     "Are you sure you want to delete this item?": "Siz buni o'chirishni xohlayotganingizga aminmisiz?",
@@ -162,30 +163,30 @@
     "t_button_complete": "Tugatildi",
     "t_number_to_be_filled": "Barchasi to'ldiriladi",
     "t_number_completed": "Tugatildi",
-	"no_unknown": "Noma'lum bo'lishi mumkin emas",
+    "no_unknown": "Noma'lum bo'lishi mumkin emas",
     "child_under_7": "Bola 7 yoshdan kichik edi",
-	"t_settlement_type_10": "Viloyati",
-	"t_settlement_type_20": "Tumani",
-	"t_settlement_type_21": "Viloyat ahamiyatiga ega shaharlar",
-	"t_settlement_type_22": "Shaxarning tumanlari",
-	"t_settlement_type_23": "Tuman ahamiyatiga ega shaharlar",
-	"t_settlement_type_24": "Tuman ichidagi shaharchalar",
-	"t_settlement_type_31": "Qishloq fuqarolar yig'ini",
-	"t_settlement_type_10_value": "10",
-	"t_settlement_type_20_value": "20",
-	"t_settlement_type_21_value": "21",
-	"t_settlement_type_22_value": "22",
-	"t_settlement_type_23_value": "23",
-	"t_settlement_type_24_value": "24",
-	"t_settlement_type_31_value": "31",
-	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
+    "t_settlement_type_10": "Viloyati",
+    "t_settlement_type_20": "Tumani",
+    "t_settlement_type_21": "Viloyat ahamiyatiga ega shaharlar",
+    "t_settlement_type_22": "Shaxarning tumanlari",
+    "t_settlement_type_23": "Tuman ahamiyatiga ega shaharlar",
+    "t_settlement_type_24": "Tuman ichidagi shaharchalar",
+    "t_settlement_type_31": "Qishloq fuqarolar yig'ini",
+    "t_settlement_type_10_value": "10",
+    "t_settlement_type_20_value": "20",
+    "t_settlement_type_21_value": "21",
+    "t_settlement_type_22_value": "22",
+    "t_settlement_type_23_value": "23",
+    "t_settlement_type_24_value": "24",
+    "t_settlement_type_31_value": "31",
+    "af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
     "impossible": "Imkonsiz",
     "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
-	"main._chooseFolder": "Choose folder",
-	"_chooseFile": "Choose file",
-	"main.success": "Success",
-	"main._dataDownloaded": "Export successful!",
-	"Please fill in all fields": "Please fill in all fields",
-	"Error": "Error",
-	"main._dataDownloadedError": "Error. No folder selected!"
+    "main._chooseFolder": "Choose folder",
+    "_chooseFile": "Choose file",
+    "main.success": "Success",
+    "main._dataDownloaded": "Export successful!",
+    "Please fill in all fields": "Please fill in all fields",
+    "Error": "Error",
+    "main._dataDownloadedError": "Error. No folder selected!"
 }
