--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -190,5 +190,6 @@
 	"Error": "Error",
 	"main._dataDownloadedError": "Error. No folder selected!",
 	"The following fields are mandatory: J1!": "The following fields are mandatory: J1!",
-	"Some instruments are not allowed to be imported. Please check the file and try again.": "Some instruments are not allowed to be imported. Please check the file and try again."
+	"Some instruments are not allowed to be imported. Please check the file and try again.": "Some instruments are not allowed to be imported. Please check the file and try again.",
+	"Пожалуйста заполните все поля": "Пожалуйста заполните все поля"
 }
