--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,7 +17,6 @@
 	"Please fill all fields": "Please fill all fields",
 	"User deleted.": "User deleted.",
 	"Are you sure you want to delete this user?": "Are you sure you want to delete this user?",
-	"ATU code must be 12 characters long": "ATU code must be 12 characters long",
 	"Please enter a valid email address": "Please enter a valid email address",
 	"Instrument error.": "Instrument error.",
 	"User added.": "User added.",
@@ -78,8 +77,11 @@
 	"t_institution_type_option_24_value": "24",
 	"t_institution_type_option_25_value": "25",
 	"t_institution_type_option_26_value": "26",
-	"t_no_children": "Number of children placed in the service",
-	"t_no_staff": "Number of staff working in the service",
+	"t_children": "Number of children placed in the service",
+	"t_staff": "Number of staff working in the service",
+	"t_capacity": "Number of staff working in the service",
+	"t_employees": "Number of staff working in the service",
+	"t_leavers": "Number of young people who left the care system",
 	"t_no_patronat": "Number of",
 	"t_no_young_left": "Number of young people who left the care system",
 	"t_button_save": "Save",
