--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -17,7 +17,6 @@
     "Please fill all fields": "Пожалуйста заполните все поля",
     "User deleted.": "Пользователь удален",
     "Are you sure you want to delete this user?": "Вы уверены, что хотите удалить этого пользователя?",
-    "ATU code must be 12 characters long": "Код ATU должен составлять не менее 12 символов",
     "Please enter a valid email address": "Пожалуйста введите действующий адрес электронной почты",
     "Instrument error.": "Ошибка прибора",
     "User added.": "Пользователь добавлен",
@@ -78,8 +77,11 @@
     "t_institution_type_option_24_value": "24",
     "t_institution_type_option_25_value": "25",
     "t_institution_type_option_26_value": "26",
-    "t_no_children": "Количество детей, получающих услуги",
-    "t_no_staff": "Количество персонала, работающих в учреждении",
+    "t_children": "Количество детей, получающих услуги",
+    "t_staff": "Количество персонала, работающих в учреждении",
+	"t_capacity": "Number of staff working in the service",
+	"t_employees": "Number of staff working in the service",
+	"t_leavers": "Количество молодых людей, покинувших систему альтернативной опеки",
     "t_no_patronat": "Количество",
     "t_no_young_left": "Количество молодых людей, покинувших систему альтернативной опеки",
     "t_button_save": "Сохранить",
