--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -139,7 +139,7 @@
     "t_yplcs_list": "Анкета о молодом человеке, выходящем из системы опеки  детей",
     "The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "Следующие поля обязательны для заполнения: PI1, PI1A,PI1B, PI1C",
     "t_cibs_list": "Анкета о ребенке, помещенном в специализированную школу-интернат",
-    "not_in_registry": "Учреждения нет в Реестре",
+    "not_in_registry": "Учреждение не указано в реестре",
     "t_tqyp_list": "",
     "t_patronat_family_questionnaires": "Анкета для патронатных семей",
     "t_instrument8": "I8. Анкета для патронатных семей",
