--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -136,7 +136,7 @@
 	"t_yplcs_list": "Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
 	"The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "Quyidagi maydonlarni to'ldirish majburiy: PI1, PI1A,PI1B, PI1C",
 	"t_cibs_list": "Ixtisoslashtirilgan maktab-internatlarga joylashtirilgan bola to'g'risida so'rovnoma",
-	"not_in_registry": "Muassasa Reestrda mavjud emas",
+	"not_in_registry": "Muassasa reestrda ko'rsatilmagan",
 	"t_tqyp_list": "",
 	"t_patronat_family_questionnaires": "Patronat oilasi uchun so'rovnoma",
 	"t_instrument8": "I8. Patronat oilasi uchun so'rovnoma",
