--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -188,5 +188,6 @@
 	"Please fill in all fields": "Please fill in all fields",
 	"Error": "Error",
 	"main._dataDownloadedError": "Error. No folder selected!",
-	"t_user_type": "Foydalanuvchi turi"
+	"t_user_type": "Foydalanuvchi turi",
+	"must_be_earlier": "X dagi sana Y dan oldinroq bo'lishi kerak"
 }
