local dash updated

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -164,6 +164,7 @@
 	"t_instruments": "Instruments list",
 	"t_button_complete": "Completed",
 	"t_number_to_be_filled": "Number to be filled",
+	"t_number_filled": "Number filled/started",
 	"t_number_completed": "Number completed",
 	"no_unknown": "Cannot be unknown",
 	"child_under_7": "The child was under 7 years of age",
@@ -203,4 +204,5 @@
 	"Invalid authorization code.": "Invalid authorization code.",
 	"must_be_earlier": "X must be earlier than Y",
 	"t_select_service_from_list": "Please select a service from the list"
+
 }
