--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -86,6 +86,7 @@
 	"t_no_young_left": "Количество молодых людей, покинувших систему альтернативной опеки",
 	"t_button_save": "Сохранить",
 	"t_users": "Пользователи",
+	"t_user": "Пользователь",
 	"t_name": "Имя",
 	"t_email": "Электронная почта",
 	"t_role": "Роль",
