--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -83,6 +83,7 @@
 	"t_no_young_left": "Muqobil vasiylik tizimini tark etgan yosh shaxslar soni",
 	"t_button_save": "Saqlash",
 	"t_users": "Foydalanuvchilar",
+	"t_user": "Foydalanuvchi",
 	"t_name": "Ism",
 	"t_email": "Elektron pochta",
 	"t_role": "Roli",
