--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -196,6 +196,7 @@
 	"must_be_earlier": "Дата в X должна быть раньше, чем Y",
 	"t_select_service_from_list": "t_select_service_from_list",
 	"t_pf": "t_pf",
-	"t_inson_services": "t_inson_services",
-	"t_auth_code": "t_auth_code"
+	"t_auth_code": "Authorization code",
+	"t_enable_user": "This user is disabled. Please contact the regional coordinator for an authorization code to enable it.",
+	"t_enable_user_button": "Enable user"
 }
