app translation - updated - WIP

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,60 +27,17 @@
 	"t_export_data": "Export Data",
 	"t_filter": "Filter",
 	"t_filter_by": "Filter by",
-	"t_external_evaluators": "External evaluators",
 	"t_import": "Import",
 	"t_reports": "Reports",
-	"t_institution_name": "Institution name",
-	"t_institution_code": "Institution code",
-	"t_institution_address": "Institution address",
-	"t_institution_atu_code": "Institution code of the administrative-territorial unit",
-	"t_institution_region": "Region",
-	"t_institution_district": "District",
 	"t_institution_type": "Type of institution",
-	"t_institution_type_group_1": "Childcare institutions:",
-	"t_institution_type_group_2": "Boarding schools:",
-	"t_institution_type_option_11": "Mehribonlik house",
-	"t_institution_type_option_12": "Muruvat house for children with disabilities",
-	"t_institution_type_option_13": "Family children's home",
-	"t_institution_type_option_14": "SOS children's villages/families",
-	"t_institution_type_option_15": "Children's home (Baby home)",
-	"t_institution_type_option_16": "Patronat family",
-	"t_institution_type_option_17": "Trusteeship/Guardianship care",
-	"t_institution_type_option_21": "Type I- II for deaf or with hearing impairments children",
-	"t_institution_type_option_22": "Type III- IV for blind or visually impaired children",
-	"t_institution_type_option_23": "Type V for children with severe speech impairments",
-	"t_institution_type_option_24": "Type VI for children with musculoskeletal disorders",
-	"t_institution_type_option_25": "Type VII for children with children with slow mental development / mental disorders",
-	"t_institution_type_option_26": "Type VIII for children with intellectual disabilities",
-	"t_institution_type_option_11_value": "11",
-	"t_institution_type_option_12_value": "12",
-	"t_institution_type_option_13_value": "13",
-	"t_institution_type_option_14_value": "14",
-	"t_institution_type_option_15_value": "15",
-	"t_institution_type_option_16_value": "16",
-	"t_institution_type_option_17_value": "17",
-	"t_institution_type_option_21_value": "21",
-	"t_institution_type_option_22_value": "22",
-	"t_institution_type_option_23_value": "23",
-	"t_institution_type_option_24_value": "24",
-	"t_institution_type_option_25_value": "25",
-	"t_institution_type_option_26_value": "26",
 	"t_children": "Number of children placed in the service",
 	"t_staff": "Number of staff working in the service",
-	"t_capacity": "Institution capacity",
-	"t_employees": "Number of staff working in the service",
 	"t_leavers": "Number of young people who left the care system",
-	"t_no_patronat": "Number of",
-	"t_no_young_left": "Number of young people who left the care system",
 	"t_button_save": "Save",
 	"t_users": "Users",
 	"t_user": "User",
 	"t_name": "Name",
 	"t_email": "E-mail",
-	"t_role": "Role",
-	"t_country": "Country",
-	"t_city": "City",
-	"t_add": "Add",
 	"t_first_name": "First name",
 	"t_last_name": "Last name",
 	"t_patronymics": "Patronymics",
@@ -91,19 +48,19 @@
 	"t_profession": "Profession",
 	"t_phone": "Phone",
 	"t_edit_user": "Edit user",
-	"t_cpis_list": "CPIS list",
 	"t_add_child": "Add child",
 	"t_csr_list": "Staff Registry List",
 	"t_add_staff": "Add staff",
 	"t_job_title": "Job title",
 	"t_pin": "PIN",
-	"Instrument saved.": "Instrument saved.",
-	"Completati corect toate campurile!": "All entries should be correctly filled in!",
 	"The following fields are mandatory: PIN, LK1a, LK1b, LK1c!": "The following fields are mandatory: PIN, LK1a, LK1b, LK1c!",
+	"The following fields are mandatory: IFM1, IFM2, IFM3!": "The following fields are mandatory: IFM1, IFM2, IFM3!",
+	"The following fields are mandatory: IG1, IG2, IG3!": "The following fields are mandatory: IG1, IG2, IG3!",
+	"The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "The following fields are mandatory: PI1, PI1A, PI1B, PI1C!",
+	"The following fields are mandatory: J1!": "The following fields are mandatory: J1!",
+	"The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
+	"Instrument saved.": "Instrument saved.",
 	"t_choose": "--- choose ---",
-	"t_choose_value": "-9",
-	"The following fields are mandatory: E1, EUID!": "The following fields are mandatory: E1, EUID!",
-	"t_euid": "EUID",
 	"t_id": "ID",
 	"Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
 	"Item deleted.": "Item deleted.",
@@ -111,84 +68,51 @@
 	"t_add_family_home": "Add Family Home",
 	"Value_up_to_ten": "The value must be up to 10",
 	"Start_before_end": "Admission date before exit date",
-	"t_notatall": "1. Not at all",
-	"t_notatall_value": "1",
-	"t_total": "10. Total",
-	"t_total_value": "10",
-	"The following fields are mandatory: IFM1, IFM2, IFM3!": "The following fields are mandatory: IFM1, IFM2, IFM3!",
 	"At_least_one_disability": "At least one disability",
 	"At_least_one_brother_or_sister": "At least one brother or sister",
 	"t_pfq_list": "Patronat Family Questionnaire List",
 	"t_add_patronat_family": "Add Patronat Family",
-	"The following fields are mandatory: IG1, IG2, IG3!": "The following fields are mandatory: IG1, IG2, IG3!",
 	"t_eef_list": "External evaluation form of the childcare institutions and boarding schools",
 	"t_add_evaluation": "Add evaluation",
 	"t_institution": "Institution",
 	"t_add_young_people": "Add young person",
 	"t_yplcs_list": "Questionnaire about the young person leaving the child care system",
-	"The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "The following fields are mandatory: PI1, PI1A, PI1B, PI1C!",
 	"t_cibs_list": "Questionnaire about the child placed in specialized boarding schools",
 	"not_in_registry": "The institution does not appear in the Registry",
 	"t_tqyp_list": "Trace questionnaire about the young person who left the alternative care system",
-	"t_patronat_family_questionnaires": "Patronat Family Questionnaire",
-	"t_instrument8": "I8. Patronat Family Questionnaire",
-	"t_children_placed_in_the_service": "Questionnaire about the child placed into the child protection system",
 	"t_instrument1": "I1. Questionnaire about the child placed into the child protection system",
-	"t_family_type_children_s_home_questionnaire": "Family-Type Children's Home Questionnaire",
-	"t_instrument7": "I7. Family-Type Children's Home Questionnaire",
-	"t_questionnaire_on_the_material_resources": "Material resources of the institution and the living conditions of the residing children",
-	"t_instrument4": "I4. Material resources of the institution and the living conditions of the residing children",
-	"t_staff_working_in_the_service": "Staff registry of the childcare institutions and specialized boarding-schools",
-	"t_instrument3": "I3. Staff registry of the childcare institutions and specialized boarding-schools",
-	"t_data_sheet_on_entries_and_exits": "Synthetic Data Collection Sheet Regarding Entries and Exits from the Childcare Institution and Specialized Boarding Schools",
-	"t_instrument6": "I6. Synthetic Data Collection Sheet Regarding Entries and Exits from the Childcare Institution and Specialized Boarding Schools",
-	"t_young_people_who_left_care_system": "Questionnaire about the young person leaving the child care system",
-	"t_instrument5": "I5. Questionnaire about the young person leaving the child care system",
-	"t_child_placed_in_specialized_boarding_schools": "Questionnaire about the child placed in specialized boarding schools",
 	"t_instrument2": "I2. Questionnaire about the child placed in specialized boarding schools",
-	"t_trace_questionnaire_about_the_young_person_who_left_the_alternative_care_system": "Trace questionnaire about the young person who left the alternative care system",
+	"t_instrument3": "I3. Staff registry of the childcare institutions and specialized boarding-schools",
+	"t_instrument4": "I4. Material resources of the institution and the living conditions of the residing children",
+	"t_instrument5": "I5. Questionnaire about the young person leaving the child care system",
 	"t_instrument5A": "I5A. Trace questionnaire about the young person who left the alternative care system",
-	"t_external_evaluation_forms": "External evaluation form of the childcare institutions and boarding schools",
+	"t_instrument6": "I6. Synthetic Data Collection Sheet Regarding Entries and Exits from the Childcare Institution and Specialized Boarding Schools",
+	"t_instrument7": "I7. Family-Type Children's Home Questionnaire",
+	"t_instrument8": "I8. Patronat Family Questionnaire",
 	"t_instrument9": "I9. External evaluation form of the childcare institutions and boarding schools",
+	"t_children_placed_in_the_service": "Questionnaire about the child placed into the child protection system",
+	"t_family_type_children_s_home_questionnaire": "Family-Type Children's Home Questionnaire",
+	"t_questionnaire_on_the_material_resources": "Material resources of the institution and the living conditions of the residing children",
+	"t_staff_working_in_the_service": "Staff registry of the childcare institutions and specialized boarding-schools",
+	"t_data_sheet_on_entries_and_exits": "Synthetic Data Collection Sheet Regarding Entries and Exits from the Childcare Institution and Specialized Boarding Schools",
+	"t_young_people_who_left_care_system": "Questionnaire about the young person leaving the child care system",
+	"t_patronat_family_questionnaires": "Patronat Family Questionnaire",
 	"t_instruments": "Instruments list",
 	"t_button_complete": "Completed",
 	"t_number_to_be_filled": "Number to be filled",
 	"t_number_filled": "Number filled/started",
 	"t_number_completed": "Number completed",
 	"t_inson_services": "INSON services",
-	"no_unknown": "Cannot be unknown",
-	"child_under_7": "The child was under 7 years of age",
-	"t_settlement_type_10": "Region",
-	"t_settlement_type_20": "District",
-	"t_settlement_type_21": "District-level city",
-	"t_settlement_type_22": "City District",
-	"t_settlement_type_23": "Town",
-	"t_settlement_type_24": "Urban-type settlement",
-	"t_settlement_type_31": "Rural community",
-	"t_settlement_type_10_value": "10",
-	"t_settlement_type_20_value": "20",
-	"t_settlement_type_21_value": "21",
-	"t_settlement_type_22_value": "22",
-	"t_settlement_type_23_value": "23",
-	"t_settlement_type_24_value": "24",
-	"t_settlement_type_31_value": "31",
 	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
-	"impossible": "Impossible",
-	"The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
 	"main._chooseFolder": "Choose folder",
-	"_chooseFile": "Choose file",
+	"main._chooseFile": "Choose file",
 	"main.success": "Success",
 	"main._dataDownloaded": "Export successful!",
 	"Please fill in all fields": "Please fill in all fields",
 	"Error": "Error",
 	"main._dataDownloadedError": "Error. No folder selected!",
-	"The following fields are mandatory: J1!": "The following fields are mandatory: J1!",
 	"Some instruments are not allowed to be imported. Please check the file and try again.": "Some instruments are not allowed to be imported. Please check the file and try again.",
-	"Пожалуйста заполните все поля": "Пожалуйста заполните все поля",
 	"t_user_type": "Type of user",
-	"t_children_fth": "Children in Family-Type Home",
-	"t_fth": "Family-Type Home",
-	"t_leavers_fth": "Young person leaving the child care system",
 	"t_pf": "Patronat Family",
 	"t_auth_code": "Authorization code",
 	"Invalid authorization code.": "Invalid authorization code.",
