--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -7,21 +7,11 @@
 	"User error. Please login again.": "Xato! Iltimos, qayta kiring!",
 	"logout": "Chiqish",
 	"back": "Orqaga",
-	"menuScreen": "Iltimos, variantni tanlang",
-	"dashboard": "Asboblar paneli",
-	"dataEntry": "Ma'lumotlarni kiritish",
-	"importData": "Ma'lumotlarni import qilish",
-	"exportData": "Ma'lumotlarni eksport qilish",
 	"Institution details saved.": "Muassasaga oid ma'lumotlar saqlandi",
 	"User updated.": "Foydalanuvchi yangilandi",
 	"Please fill all fields": "Iltimos, barcha qatorlarni to'ldiring",
-	"User deleted.": "Foydalanuvchi o'chirildi",
-	"Are you sure you want to delete this user?": "Ushbu foydalanuvchini o'chirishni xohlayotganingizga aminmisiz?",
-	"Please enter a valid email address": "Iltimos, faol elektron pochta manzilini kiriting",
 	"Instrument error.": "Qurilma xatosi",
 	"User added.": "Foydalanuvchi qo'shildi",
-	"t_service_level_view_data_collectors": "Xizmat darajasini ko'rish / Ma'lumot yig'uvchilar",
-	"t_service_level_questionnaires": "Xizmat darajasi so'rovnomalari",
 	"t_status": "Holat",
 	"t_actions": "Harakatlar",
 	"t_individual_level_questionnaires": "Individual darajadagi so'rovnomalar",
@@ -29,8 +19,6 @@
 	"t_completion_rate": "To'ldirish darajasi",
 	"t_completed": "Tugatildi",
 	"t_in_progress": "Jarayonda",
-	"t_not_started": "Boshlanmadi",
-	"t_view_edit": "Ko'rish / Tahrirlash",
 	"t_institution_details": "Muassasaga oid ma'lumotlar",
 	"t_view": "Ko'rish",
 	"t_regionalCoordinator_level_view_regionalCoordinators": "Hududiy koordinator/hududiy koordinatorlarning ko'rish darajasi",
@@ -39,57 +27,17 @@
 	"t_export_data": "Ma'lumotlarni eksport qilish",
 	"t_filter": "Filtr",
 	"t_filter_by": "... bo'yicha filtrlash",
-	"t_external_evaluators": "Tashqi baholovchilar",
 	"t_import": "Import",
 	"t_reports": "Hisobotlar",
-	"t_institution_name": "Muassasa nomi",
-	"t_institution_code": "Muassasa kodi",
-	"t_institution_address": "Muassasa manzili",
-	"t_institution_atu_code": "Ma'muriy-hududiy birlik kodi",
-	"t_institution_region": "Viloyati",
-	"t_institution_district": "Tumani",
 	"t_institution_type": "Muassasa turi",
-	"t_institution_type_group_1": "Bolalar muassasalari:",
-	"t_institution_type_group_2": "Maktrab-internatlar",
-	"t_institution_type_option_11": "Mehribonlik uyi",
-	"t_institution_type_option_12": "\"Muruvvat\" nogironligi bo'lgan bolalar uchun  internat uyi",
-	"t_institution_type_option_13": "Oilaviy bolalar uyi",
-	"t_institution_type_option_14": "SOS Bolalar makhallalari/oilalari",
-	"t_institution_type_option_15": "Bolalar uyi ",
-	"t_institution_type_option_16": "Patronat oila",
-	"t_institution_type_option_17": "Vasiylik/homiylik",
-	"t_institution_type_option_21": "I-II tur. Kar va eshitish qobiliyati past bolalar uchun",
-	"t_institution_type_option_22": "III-IV tur. Ko'r va ko'zi ojiz bolalar uchun",
-	"t_institution_type_option_23": "V tur. Og'ir nutq buzilishi bo'lgan bolalar uchun",
-	"t_institution_type_option_24": "VI tur. Mushak-skelet tizimining buzilishi bo'lgan bolalar uchun",
-	"t_institution_type_option_25": "VII tur. Aqliy rivojlanishida nuqsoni bo'lgan bolalar uchun",
-	"t_institution_type_option_26": "VIII tur. Intellektual rivojlanishida nuqsoni bo'lgan bolalar uchun",
-	"t_institution_type_option_11_value": "11",
-	"t_institution_type_option_12_value": "12",
-	"t_institution_type_option_13_value": "13",
-	"t_institution_type_option_14_value": "14",
-	"t_institution_type_option_15_value": "15",
-	"t_institution_type_option_16_value": "16",
-	"t_institution_type_option_17_value": "17",
-	"t_institution_type_option_21_value": "21",
-	"t_institution_type_option_22_value": "22",
-	"t_institution_type_option_23_value": "23",
-	"t_institution_type_option_24_value": "24",
-	"t_institution_type_option_25_value": "25",
-	"t_institution_type_option_26_value": "26",
-	"t_no_children": "Xizmatga ega bo'layotgan bolalar soni",
-	"t_no_staff": "Muassasada ishlayotgan xodimlar soni",
-	"t_no_patronat": "Soni",
-	"t_no_young_left": "Muqobil vasiylik tizimini tark etgan yosh shaxslar soni",
+	"t_children": "Xizmatga ega bo'layotgan bolalar soni",
+	"t_staff": "Muassasada ishlayotgan xodimlar soni",
+	"t_leavers": "Muqobil vasiylik tizimini tark etgan yosh shaxslar soni",
 	"t_button_save": "Saqlash",
 	"t_users": "Foydalanuvchilar",
 	"t_user": "Foydalanuvchi",
 	"t_name": "Ism",
 	"t_email": "Elektron pochta",
-	"t_role": "Roli",
-	"t_country": "Viloyati",
-	"t_city": "Shahar",
-	"t_add": "Qo'shish",
 	"t_first_name": "Ism",
 	"t_last_name": "Familiya",
 	"t_patronymics": "Otasining ismi",
@@ -100,19 +48,19 @@
 	"t_profession": "Kasb",
 	"t_phone": "Telefon",
 	"t_edit_user": "Foydalanuvchi ko'rinishi",
-	"t_cpis_list": "CPIS varog'i",
 	"t_add_child": "Bolani qo'shish",
 	"t_csr_list": "Muassasa xodimlarining reestri",
 	"t_add_staff": "Xodimni qo'shish",
-	"t_pin": "PIN",
 	"t_job_title": "Lavozim nomi",
-	"Instrument saved.": "Shakl saqlandi",
-	"Completati corect toate campurile!": "Barcha ma'lumotlar tog'ri kiritilishi kerak",
+	"t_pin": "PIN",
 	"The following fields are mandatory: PIN, LK1a, LK1b, LK1c!": "Quyidagi maydonlarni to'ldirish majburiy: PIN, LK1a, LK1b, LK1c!",
-	"t_choose": "--- tanlang ---",
-	"t_choose_value": "-9",
+	"The following fields are mandatory: IFM1, IFM2, IFM3!": "Quyidagi maydonlarni to'ldirish majburiy: IFM1,IFM2,IFM3!",
+	"The following fields are mandatory: IG1, IG2, IG3!": "Quyidagi maydonlarni to'ldirish majburiy: IG1,IG2,IG3!",
+	"The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "Quyidagi maydonlarni to'ldirish majburiy: PI1, PI1A,PI1B, PI1C",
 	"The following fields are mandatory: J1!": "Quyidagi maydonlarni to'ldirish majburiy: J1!",
-	"t_euid": "EUID",
+	"The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "Quyidagi maydonlarni to'ldirish majburiy: PTR1, PTR2A, PTR2B, PTR2C!",
+	"Instrument saved.": "Shakl saqlandi",
+	"t_choose": "--- tanlang ---",
 	"t_id": "ID",
 	"Are you sure you want to delete this item?": "Siz buni o'chirishni xohlayotganingizga aminmisiz?",
 	"Item deleted.": "O'chirildi",
@@ -120,80 +68,58 @@
 	"t_add_family_home": "Oilaviy turdagi bolalar uylarini qo'shish",
 	"Value_up_to_ten": "Qiymat 10 ta belgidan oshmasligi lozim",
 	"Start_before_end": "Bolani qabul qilish sanasi bolaning chiqish sanasidan oldin",
-	"t_notatall": "1. Umuman yo'q",
-	"t_notatall_value": "1",
-	"t_total": "10.Jami",
-	"t_total_value": "10",
-	"The following fields are mandatory: IFM1, IFM2, IFM3!": "Quyidagi maydonlarni to'ldirish majburiy: IFM1,IFM2,IFM3!",
 	"At_least_one_disability": "Kamida bitta nogironlik",
 	"At_least_one_brother_or_sister": "Kamida bitta opa/singil yoki aka/uka",
 	"t_pfq_list": "Patronat oilalar uchun so'rovnoma",
 	"t_add_patronat_family": "Patronat oilani qo'shish",
-	"The following fields are mandatory: IG1, IG2, IG3!": "Quyidagi maydonlarni to'ldirish majburiy: IG1,IG2,IG3!",
 	"t_eef_list": "Bolalar muassasalari va maktab-internatlarning tashqi baholash shakli",
 	"t_add_evaluation": "Bahoni qo'shish",
 	"t_institution": "Muassasa",
 	"t_add_young_people": "Yosh shaxsni qo'shish",
 	"t_yplcs_list": "Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
-	"The following fields are mandatory: PI1, PI1A, PI1B, PI1C!": "Quyidagi maydonlarni to'ldirish majburiy: PI1, PI1A,PI1B, PI1C",
 	"t_cibs_list": "Ixtisoslashtirilgan maktab-internatlarga joylashtirilgan bola to'g'risida so'rovnoma",
 	"not_in_registry": "Muassasa reestrda ko'rsatilmagan",
-	"t_tqyp_list": "",
-	"t_patronat_family_questionnaires": "Patronat oilasi uchun so'rovnoma",
-	"t_instrument8": "I8. Patronat oilasi uchun so'rovnoma",
-	"t_children_placed_in_the_service": "Bolalarning vasiylik tizimiga joylashtirilgan bola toʻgʻrisida soʻrovnoma",
+	"t_tqyp_list": "Muqobil vasiylik tizimini tark etgan yosh shaxsning kuzatuv so'rovnomasi",
 	"t_instrument1": "I1. Bolalarning vasiylik tizimiga joylashtirilgan bola toʻgʻrisida soʻrovnoma",
-	"t_family_type_children_s_home_questionnaire": "Oilaviy bolalar uyi so'rоvnomasi",
-	"t_instrument7": "I7. Oilaviy bolalar uyi so'rоvnomasi",
-	"t_questionnaire_on_the_material_resources": "Muassasaning moddiy texnik bazasi va istiqomat qiluvchi bolalarning yashash sharoitlari",
-	"t_instrument4": "I4. Muassasaning moddiy texnik bazasi va istiqomat qiluvchi bolalarning yashash sharoitlari",
-	"t_staff_working_in_the_service": "Bolalar muassasalari va ixtisoslashtirilgan maktab-internatlarning hodimlar reestri",
+	"t_instrument2": "I2. Ixtisoslashtirilgan maktab-internatlarga joylashtirilgan bola to'g'risida so'rovnoma",
 	"t_instrument3": "I3. Bolalar muassasalari va ixtisoslashtirilgan maktab-internatlarning hodimlar reestri",
-	"t_data_sheet_on_entries_and_exits": "Bolalar muassasasi va ixtisoslashtirilgan maktab-internatlarga qabul qilish va ulardan chiqarish bo‘yicha umumlashgan ma'lumotlarni yig‘ish varaqasi",
-	"t_instrument6": "I6. Bolalar muassasasi va ixtisoslashtirilgan maktab-internatlarga qabul qilish va ulardan chiqarish bo‘yicha umumlashgan ma'lumotlarni yig‘ish varaqasi",
-	"t_young_people_who_left_care_system": "Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
+	"t_instrument4": "I4. Muassasaning moddiy texnik bazasi va istiqomat qiluvchi bolalarning yashash sharoitlari",
 	"t_instrument5": "I5. Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
-	"t_child_placed_in_specialized_boarding_schools": "Ixtisoslashtirilgan maktab-internatlarga joylashtirilgan bola to’g’risida so’rovnoma",
-	"t_instrument2": "I2. Ixtisoslashtirilgan maktab-internatlarga joylashtirilgan bola to’g’risida so’rovnoma",
-	"t_trace_questionnaire_about_the_young_person_who_left_the_alternative_care_system": "Muqobil vasiylik tizimini tark etgan yosh shaxsning kuzatuv so'rovnomasi",
 	"t_instrument5A": "I5A. Muqobil vasiylik tizimini tark etgan yosh shaxsning kuzatuv so'rovnomasi",
-	"t_external_evaluation_forms": "Bolalar muassasalari va maktab-internatlarning tashqi baholash shakli",
+	"t_instrument6": "I6. Bolalar muassasasi va ixtisoslashtirilgan maktab-internatlarga qabul qilish va ulardan chiqarish bo'yicha umumlashgan ma'lumotlarni yig'ish varaqasi",
+	"t_instrument7": "I7. Oilaviy bolalar uyi so'rоvnomasi",
+	"t_instrument8": "I8. Patronat oilasi uchun so'rovnoma",
 	"t_instrument9": "I9. Bolalar muassasalari va maktab-internatlarning tashqi baholash shakli",
+	"t_children_placed_in_the_service": "Bolalarning vasiylik tizimiga joylashtirilgan bola toʻgʻrisida soʻrovnoma",
+	"t_family_type_children_s_home_questionnaire": "Oilaviy bolalar uyi so'rоvnomasi",
+	"t_questionnaire_on_the_material_resources": "Muassasaning moddiy texnik bazasi va istiqomat qiluvchi bolalarning yashash sharoitlari",
+	"t_staff_working_in_the_service": "Bolalar muassasalari va ixtisoslashtirilgan maktab-internatlarning hodimlar reestri",
+	"t_data_sheet_on_entries_and_exits": "Bolalar muassasasi va ixtisoslashtirilgan maktab-internatlarga qabul qilish va ulardan chiqarish bo'yicha umumlashgan ma'lumotlarni yig'ish varaqasi",
+	"t_young_people_who_left_care_system": "Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
+	"t_patronat_family_questionnaires": "Patronat oilasi uchun so'rovnoma",
 	"t_instruments": "Shakllar ro'yxati",
 	"t_button_complete": "Tugatildi",
 	"t_number_to_be_filled": "Barchasi to'ldiriladi",
+	"t_number_filled": "Number filled/started",
 	"t_number_completed": "Tugatildi",
-	"no_unknown": "Noma'lum bo'lishi mumkin emas",
-	"child_under_7": "Bola 7 yoshdan kichik edi",
-	"t_settlement_type_10": "Viloyati",
-	"t_settlement_type_20": "Tumani",
-	"t_settlement_type_21": "Viloyat ahamiyatiga ega shaharlar",
-	"t_settlement_type_22": "Shaxarning tumanlari",
-	"t_settlement_type_23": "Tuman ahamiyatiga ega shaharlar",
-	"t_settlement_type_24": "Tuman ichidagi shaharchalar",
-	"t_settlement_type_31": "Qishloq fuqarolar yig'ini",
-	"t_settlement_type_10_value": "10",
-	"t_settlement_type_20_value": "20",
-	"t_settlement_type_21_value": "21",
-	"t_settlement_type_22_value": "22",
-	"t_settlement_type_23_value": "23",
-	"t_settlement_type_24_value": "24",
-	"t_settlement_type_31_value": "31",
+	"t_inson_services": "INSON services",
 	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
-	"impossible": "Imkonsiz",
-	"The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!": "The following fields are mandatory: PTR1, PTR2A, PTR2B, PTR2C!",
 	"main._chooseFolder": "Choose folder",
-	"_chooseFile": "Choose file",
+	"main._chooseFile": "Choose file",
 	"main.success": "Success",
 	"main._dataDownloaded": "Export successful!",
 	"Please fill in all fields": "Please fill in all fields",
 	"Error": "Error",
 	"main._dataDownloadedError": "Error. No folder selected!",
+	"Some instruments are not allowed to be imported. Please check the file and try again.": "Some instruments are not allowed to be imported. Please check the file and try again.",
 	"t_user_type": "Foydalanuvchi turi",
-	"must_be_earlier": "X dagi sana Y dan oldinroq bo'lishi kerak",
 	"t_pf": "t_pf",
-	"t_inson_services": "t_inson_services",
 	"t_auth_code": "Authorization code",
+	"Invalid authorization code.": "Invalid authorization code.",
+	"must_be_earlier": "X dagi sana Y dan oldinroq bo'lishi kerak",
+	"t_select_service_from_list": "Please select a service from the list",
 	"t_enable_user": "This user is disabled. Please contact the regional coordinator for an authorization code to enable it.",
-	"t_enable_user_button": "Enable user"
+	"t_enable_user_button": "Enable user",
+	"User enabled. Please login.": "User enabled. Please login.",
+	"Authorization code missing.": "Authorization code missing."
 }
