--- a/src/locales/tables_uz.json
+++ b/src/locales/tables_uz.json
@@ -7,6 +7,7 @@
 	"sInfoFiltered": "(jami _MAX_ ta yozuvdan filtrlangan)",
 	"sInfoPostFix": "",
 	"sSearch": "Ni qidirish:",
+	"emptyTable": "Ma'lumotlar bazasi bo'sh",
 	"sUrl": "",
 	"oPaginate": {
 		"sFirst": "Birinchi",
