--- a/src/locales/tables_ru.json
+++ b/src/locales/tables_ru.json
@@ -7,6 +7,7 @@
 	"sInfoFiltered": "(отфильтровано из _MAX_ записей)",
 	"sInfoPostFix": "",
 	"sSearch": "Искать:",
+	"emptyTable": "Нет данных в таблице",
 	"sUrl": "",
 	"oPaginate": {
 		"sFirst": "Первый",
