--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -105,13 +105,13 @@
 	"t_number_completed": "Завершено",
 	"t_inson_services": "INSON services - RU",
 	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
-	"main._chooseFolder": "Choose folder",
-	"main._chooseFile": "Choose file",
-	"main.success": "Success",
-	"main._dataDownloaded": "Export successful!",
-	"Please fill in all fields": "Please fill in all fields",
-	"Error": "Error",
-	"main._dataDownloadedError": "Error. No folder selected!",
+	"main._chooseFolder": "Выбрать папку",
+	"main._chooseFile": "Выбрать файл",
+	"main.success": "Удачно",
+	"main._dataDownloaded": "Экспорт выполнен удачно!",
+	"Please fill in all fields": "Пожалуйста заполните все поля.",
+	"Error": "Ошибка",
+	"main._dataDownloadedError": "Ошибка Папка не выбрана!",
 	"Some instruments are not allowed to be imported. Please check the file and try again.": "Some instruments are not allowed to be imported. Please check the file and try again.",
 	"t_user_type": "Тип пользователя",
 	"t_pf": "Патронатная семья",
