--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -105,13 +105,13 @@
 	"t_number_completed": "Tugatildi",
 	"t_inson_services": "INSON services",
 	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
-	"main._chooseFolder": "Choose folder",
-	"main._chooseFile": "Choose file",
-	"main.success": "Success",
-	"main._dataDownloaded": "Export successful!",
-	"Please fill in all fields": "Please fill in all fields",
-	"Error": "Error",
-	"main._dataDownloadedError": "Error. No folder selected!",
+	"main._chooseFolder": "Papkani tanlang",
+	"main._chooseFile": "Faylni tanlang",
+	"main.success": "Muvaffaqiyatli",
+	"main._dataDownloaded": "Eksport muvaffaqiyatli bajarildi!",
+	"Please fill in all fields": "Iltimos, barcha maydonlarni to'ldiring.",
+	"Error": "Xato",
+	"main._dataDownloadedError": "Xato. Papka tanlanmagan!",
 	"Some instruments are not allowed to be imported. Please check the file and try again.": "Some instruments are not allowed to be imported. Please check the file and try again.",
 	"t_user_type": "Foydalanuvchi turi",
 	"t_pf": "Patronat oila",
