regional dash -- WIP

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -127,5 +127,9 @@
 	"t_hr_specialist": "HR SPECIALIST",
 	"t_admin_specialist": "ADMIN SPECIALIST",
 	"No services available": "No services available",
-	"invalid_date": "Invalid date"
+	"invalid_date": "Invalid date",
+	"t_childcare_residential_institutions": "Childcare residential institutions",
+	"t_specialized_boarding_schools": "Specialized boarding schools",
+	"t_inson": "INSON",
+	"No institutions found": "No institutions found"
 }
