regional coordinator - WIP

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -76,6 +76,7 @@
 	"t_eef_list": "Форма внешней оценки детских учреждений и школ-интернатов",
 	"t_add_evaluation": "Добавить оценку",
 	"t_institution": "Учреждение",
+	"t_institutions": "Yчреждения",
 	"t_add_young_people": "Добавьте молодого человека",
 	"t_yplcs_list": "Анкета о молодом человеке, выходящем из системы опеки  детей",
 	"t_cibs_list": "Анкета о ребенке, помещенном в специализированную школу-интернат",
