--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -76,6 +76,7 @@
 	"t_eef_list": "Bolalar muassasalari va maktab-internatlarning tashqi baholash shakli",
 	"t_add_evaluation": "Bahoni qo'shish",
 	"t_institution": "Muassasa",
+	"t_institutions": "Muassasalar",
 	"t_add_young_people": "Yosh shaxsni qo'shish",
 	"t_yplcs_list": "Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
 	"t_cibs_list": "Ixtisoslashtirilgan maktab-internatlarga joylashtirilgan bola to'g'risida so'rovnoma",
