--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -75,6 +75,7 @@
 	"t_eef_list": "External evaluation form of the childcare institutions and boarding schools",
 	"t_add_evaluation": "Add evaluation",
 	"t_institution": "Institution",
+	"t_institutions": "Institutions",
 	"t_add_young_people": "Add young person",
 	"t_yplcs_list": "Questionnaire about the young person leaving the child care system",
 	"t_cibs_list": "Questionnaire about the child placed in specialized boarding schools",
@@ -131,5 +132,7 @@
 	"t_childcare_residential_institutions": "Childcare residential institutions",
 	"t_specialized_boarding_schools": "Specialized boarding schools",
 	"t_inson": "INSON",
-	"No institutions found": "No institutions found"
+	"t_insons": "INSONS",
+	"No institutions found": "No institutions found",
+	"t_inson_details": "Inson details"
 }
