--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -103,7 +103,7 @@
 	"t_number_to_be_filled": "Number to be filled",
 	"t_number_filled": "Number filled/started",
 	"t_number_completed": "Number completed",
-	"t_inson_services": "INSON services",
+	"t_inson_services": "List of family-type children's homes",
 	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
 	"main._chooseFolder": "Choose folder",
 	"main._chooseFile": "Choose file",
@@ -125,9 +125,9 @@
 	"User enabled. Please login.": "User enabled. Please login.",
 	"Authorization code missing.": "Authorization code missing.",
 	"No more users.": "No more users.",
-	"t_data_collector": "DATA COLLECTOR",
-	"t_hr_specialist": "HR SPECIALIST",
-	"t_admin_specialist": "ADMIN SPECIALIST",
+	"t_data_collector": "Data collector - childcare / protection / special education specialist",
+	"t_hr_specialist": "Data collector - HR specialist",
+	"t_admin_specialist": "Data collector - Admin specialist",
 	"No services available": "No services available",
 	"invalid_date": "Invalid date",
 	"t_childcare_residential_institutions": "Childcare residential institutions",
