--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -104,7 +104,7 @@
 	"t_number_to_be_filled": "Всего заполнить",
 	"t_number_filled": "Number filled/started",
 	"t_number_completed": "Завершено",
-	"t_inson_services": "INSON services - RU",
+	"t_inson_services": "List of family-type children's homes",
 	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
 	"main._chooseFolder": "Выбрать папку",
 	"main._chooseFile": "Выбрать файл",
@@ -126,9 +126,9 @@
 	"User enabled. Please login.": "User enabled. Please login.",
 	"Authorization code missing.": "Authorization code missing.",
 	"No more users.": "No more users.",
-	"t_data_collector": "DATA COLLECTOR - RU",
-	"t_hr_specialist": "HR SPECIALIST - RU",
-	"t_admin_specialist": "ADMIN SPECIALIST - RU",
+	"t_data_collector": "Сборщик данных - специалист по уходу за ребенком /специалист сектора защиты ребенка/специалист специализированного учреждения",
+	"t_hr_specialist": "Сборщик данных - сотрудник кадрового отдела",
+	"t_admin_specialist": "Сборщик данных - сотрудник администрации",
 	"No services available": "No services available - RU",
 	"invalid_date": "Invalid date",
 	"t_childcare_residential_institutions": "Childcare residential institutions",
