--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -104,7 +104,7 @@
 	"t_number_to_be_filled": "Barchasi to'ldiriladi",
 	"t_number_filled": "Number filled/started",
 	"t_number_completed": "Tugatildi",
-	"t_inson_services": "INSON services",
+	"t_inson_services": "List of family-type children's homes",
 	"af1_instrument_04": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
 	"main._chooseFolder": "Papkani tanlang",
 	"main._chooseFile": "Faylni tanlang",
@@ -126,9 +126,9 @@
 	"User enabled. Please login.": "User enabled. Please login.",
 	"Authorization code missing.": "Authorization code missing.",
 	"No more users.": "No more users.",
-	"t_data_collector": "DATA COLLECTOR - UZ",
-	"t_hr_specialist": "HR SPECIALIST - UZ",
-	"t_admin_specialist": "ADMIN SPECIALIST - UZ",
+	"t_data_collector": "Ma'lumot yig'uvchi/kirituvchi - bolalarga vasiylik qiluvchi / g'amxo'rlik qiluvchi/ maxsus ta'lim mutaxassisi",
+	"t_hr_specialist": "Ma'lumot yig'uvchi/kirituvchi - Xodimlar bo'limi mutaxassisi",
+	"t_admin_specialist": "Ma'lumot yig'uvchi/kirituvchi - Ma'muriyat bo'limi vakili",
 	"No services available": "No services available - UZ",
 	"invalid_date": "Invalid date",
 	"t_childcare_residential_institutions": "Childcare residential institutions",
