--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -133,5 +133,12 @@
 	"invalid_date": "Invalid date",
 	"t_childcare_residential_institutions": "Childcare residential institutions",
 	"t_specialized_boarding_schools": "Specialized boarding schools",
-	"t_inson": "INSON"
+	"t_inson": "INSON",
+	"E0170": "Мальчики: NEST + NEO = TNET",
+	"E0171": "Девочки: NEST + NEO = TNET",
+	"E0172": "Всего: NEST + NEO = TNET",
+	"E0173": "TNR0 + TNET - NEXT = TNR1",
+	"E0174": "Мальчики: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
+	"E0175": "Девочки: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
+	"E0176": "Всего: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT"
 }
