--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -133,5 +133,12 @@
 	"invalid_date": "Invalid date",
 	"t_childcare_residential_institutions": "Childcare residential institutions",
 	"t_specialized_boarding_schools": "Specialized boarding schools",
-	"t_inson": "INSON"
+	"t_inson": "INSON",
+	"E0170": "O'g'il bolalar: NEST + NEO = TNET",
+	"E0171": "Qizlar: NEST + NEO = TNET",
+    "E0172": "Jami: NEST + NEO = TNET",
+    "E0173": "TNR0 + TNET - NEXT = TNR1",
+    "E0174": "O'g'il bolalar: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
+    "E0175": "Qizlar: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
+    "E0176": "Jami: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT"
 }
