--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -143,5 +143,15 @@
 	"E0173": "TNR0 + TNET - NEXT = TNR1",
 	"E0174": "BOYS: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
 	"E0175": "GIRLS: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
-	"E0176": "TOTAL: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT"
+	"E0176": "TOTAL: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
+	"t_add_service": "Add service",
+	"t_add_inson_service": "Adding family-type home",
+	"t_address": "Address",
+	"t_district": "District",
+	"t_settlement": "Settlement",
+	"t_mahala": "Mahala",
+	"t_capacity": "Capacity",
+	"t_service_code": "Service code",
+	"t_service_code_text": "The service cod must be obtain from the regional coordinator",
+	"t_service_code block": "t_service_code block"
 }
