regional coordinator add fth

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -155,5 +155,7 @@
 	"t_service_code_text": "The service cod must be obtain from the regional coordinator",
 	"t_service_code block": "t_service_code block",
 	"Service added.": "Service added.",
-	"Somethig got wrong, please try again later.": "Somethig got wrong, please try again later."
+	"Somethig got wrong, please try again later.": "Somethig got wrong, please try again later.",
+	"Service code already in use.": "Service code already in use.",
+	"The provided service code is wrong.": "The provided service code is wrong."
 }
